<resources>
    <string name="app_name">CoderToDeveloperByTCLer</string>
    <string name="title_activity_collection_enumg_gnerics">CollectionEnumgGnericsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ok">确 认</string>
    <string name="cancel">取 消</string>

    <string name="text">核动力课程</string>
    <string name="title">清华大学</string>

    <!--日期选择轮子的title-->
    <string name="query_time_select_title">请选择日期</string>

    <string name="begin_at">开始于\n</string>
    <string name="end_at">结束于\n</string>

    <string name="time_start_larger_end_not_allowed">开始时间不能大于结束时间</string>

    <string name="time_left">还有%ss</string>

    <!--下载相关-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="path">下载地址：</string>
    <string name="button">开始下载</string>
    <string name="success">下载完成</string>
    <string name="error">下载出错</string>
    <string name="stopbutton">暂停下载</string>
    <string name="sdcarderror">没有SD卡</string>
    <string name="fileaddress">http://nchc.dl.sourceforge.net/project/sevenzip/7-Zip/9.20/7z920.exe</string>


</resources>
